--- a/yahtzee-react/package.json
+++ b/yahtzee-react/package.json
@@ -8,7 +8,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.4",
     "react-table": "^6.7.6"
   },
   "scripts": {
